--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.my-panel-yellow.mat-select-panel {
+  background: yellow;
+  .mat-option-text {
+      color: black;
+  }
+}
+
+.my-panel-black.mat-select-panel {
+  background: black;
+  .mat-option-text {
+      color: white;
+  }
+}
+
+.my-panel-red.mat-select-panel {
+  background: red;
+  .mat-option-text {
+      color: white;
+  }
+}
