--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -10,7 +10,7 @@
     </select>
   </mat-form-field>
   <p>
-    Selected Value: {{selected}}
+    Selected Value: {{selectFilters}}
   </p>
 </div>
 <!-- <div class="second-content">
@@ -31,9 +31,9 @@
   <mat-form-field>
     <mat-label>Preffered currency</mat-label>
 
-    <mat-select [(value)]="selected" multiple>
+    <mat-seleSct [(value)]="selected" multiple>
       <mat-option *ngFor="let currency of currencies" [value]="currency.value">{{currency.text}}</mat-option>
-    </mat-select>
+    </mat-seleSct>
   </mat-form-field>
 </div>
 <div class="fourth-content">
@@ -53,27 +53,61 @@
 </div> -->
 
 <div class="content-master">
-  <mat-checkbox (change)="selectAll(allComplete)" style="margin-right: 30px;">select all</mat-checkbox>
+  <mat-checkbox (ngModelChange)="updateCheckbox()" (selectionChange)="selectionChangeEvent($event)"
+    (change)="selectAll(!allComplete)" [checked]="allComplete" style="margin-right: 30px;">select
+    all
+  </mat-checkbox>
 
   <mat-form-field>
 
     <mat-label>Select option</mat-label>
-    <mat-select [(value)]="selected" multiple>
+    <mat-select [(ngModel)]="selectFilters" (selectionChange)="
+      selectionChangeDropdown($event.value)" (ngModelChange)="selectFilters" multiple>
       <input type="text" placeholder="Search" class="input-content">
       <mat-optgroup class="content-group" *ngFor="let data of dataMaster">
-        <mat-checkbox [indeterminate]="false" [checked]="allComplete">{{data.label}}
+        <mat-checkbox [indeterminate]="true" [checked]="data.selected">{{data.label}}
         </mat-checkbox>
         <button class="btn" (click)="iconDropdown(this.openOption)"><img [src]="iconSrc"></button>
 
         <mat-option [ngStyle]="{ display : openOption? 'none':null }" style="padding-left: 50px;"
-          *ngFor="let item of data.subLevel" [value]="item">
+          *ngFor="let item of data.subLevel" [value]="item.value">
           {{item.label}}
         </mat-option>
       </mat-optgroup>
+      <!-- <section class="example-section">
+        <mat-optgroup class="content-group" *ngFor="let data of dataMaster">
+          <span class="example-list-section">
+            <mat-checkbox class="example-margin" [checked]="allComplete" [indeterminate]="someComplete()"
+              (change)="setAll($event.checked)">
+              {{data.label}}
+            </mat-checkbox>
+            <button class="btn" (click)="iconDropdown(this.openOption)"><img [src]="iconSrc"></button>
+          </span>
+          <span class="example-list-section">
+            <ul>
+              <li *ngFor="let subtask of data.subLevel">
+                <mat-checkbox [(ngModel)]="subtask.selected" (ngModelChange)="updateAllComplete()">
+                  {{subtask.label}}
+                </mat-checkbox>
+              </li>
+            </ul>
+          </span>
+        </mat-optgroup>
+
+      </section> -->
 
     </mat-select>
   </mat-form-field>
 </div>
 <div class="content-checkbox">
+  <mat-form-field appearance="fill">
+    <mat-label>Favorite food</mat-label>
+    <mat-select [(ngModel)]="selectedValue" name="food">
+      <mat-option *ngFor="let food of foods" [value]="food.value">
+        {{food.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <p> Selected food: {{selectedValue}} </p>
 
 </div>
