add select checkbox all

--- a/src/app/dropdown-custom/dropdown-custom.component.html
+++ b/src/app/dropdown-custom/dropdown-custom.component.html
@@ -3,42 +3,29 @@
     <button class="dropdown-btn" (click)="openDropdown(this.openOption)">
       <img [src]="dropdownIconSrc" />
     </button>
-    <span
-      class="dropdown-content"
-      [ngStyle]="{ display: this.openOption ? 'none' : null }"
-    >
+    <mat-checkbox [(ngModel)]="selectItemAll" (change)="selectAll($event.checked)">
+      Select All
+    </mat-checkbox>
+    <span class="dropdown-content" [ngStyle]="{ display: this.openOption ? 'none' : null }">
+      <input type="text" placeholder="Search">
       <div *ngFor="let item of dataMaster">
         <section class="example-section">
           <span class="example-list-section">
-            <mat-checkbox
-              class="example-margin"
-              [checked]="item.selected"
-              [color]="task.color"
-              [indeterminate]="item.indeterminate"
-              (change)="setAll($event.checked, item)"
-            >
+            <mat-checkbox class="example-margin" [checked]="item.selected" [color]="task.color"
+              [indeterminate]="item.indeterminate" (change)="setAllItem($event.checked, item)">
               {{ item.label }}
             </mat-checkbox>
-            <button
-              class="btn"
-              (click)="iconDropdown(!item.optionSubLevel, item)"
-            >
+            <button class="btn" (click)="iconDropdown(!item.optionSubLevel, item)">
               <img [src]="item.iconSrc" />
             </button>
           </span>
-          <span
-            class="example-list-section"
-            [ngStyle]="{ display: !item.optionSubLevel ? 'none' : null }"
-          >
+          <span class="example-list-section" [ngStyle]="{ display: !item.optionSubLevel ? 'none' : null }">
             <ul>
               <li *ngFor="let subtask of item.subLevel">
                 <!-- <mat-checkbox [(ngModel)]="subtask.completed" [color]="subtask.color" (ngModelChange)="updateAllComplete()">
                       {{subtask.name}}
                     </mat-checkbox> -->
-                <mat-checkbox
-                  [(ngModel)]="subtask.selected"
-                  (ngModelChange)="updateAllComplete(subtask, item)"
-                >
+                <mat-checkbox [(ngModel)]="subtask.selected" (ngModelChange)="updateAllComplete(subtask, item)">
                   {{ subtask.label }}
                 </mat-checkbox>
               </li>
