--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-dropdown-custom></app-dropdown-custom>
 
-<app-nested-array-filter></app-nested-array-filter>
+<!-- <app-nested-array-filter></app-nested-array-filter> -->
