--- a/src/app/dropdown-custom/dropdown-custom.component.html
+++ b/src/app/dropdown-custom/dropdown-custom.component.html
@@ -11,8 +11,8 @@
       <div *ngFor="let item of dataMaster| filter: term">
         <section class="example-section">
           <span class="example-list-section">
-            <mat-checkbox class="example-margin" [checked]="item.selected" [color]="task.color"
-              [indeterminate]="item.indeterminate" (change)="setAllItem($event.checked, item)">
+            <mat-checkbox class="example-margin" [checked]="item.selected" [indeterminate]="item.indeterminate"
+              (change)="setAllItem($event.checked, item)">
               {{ item.label }}
             </mat-checkbox>
             <button class="btn" (click)="iconDropdown(!item.optionSubLevel, item)">
